--- a/achievements.html
+++ b/achievements.html
@@ -14,10 +14,16 @@
     <link rel="stylesheet" href="assets/css/lightbox.css">
 
 	<style>
+		footer{
+			position: absolute;
+			bottom: 0;
+			width: -webkit-fill-available;
+		}
+
 		.background{
 			position: absolute; 
-            height: 99%; 
-            width: 99%; 
+            height: -webkit-fill-available; 
+            width: -webkit-fill-available; 
             background-image: url(assets/images/allCollage.jpg); 
             background-size: contain !important; 
             background-position: center; 
@@ -168,7 +174,7 @@
 			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section4">Courses</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#" target="_blank" rel="noopener noreferrer">Achievements</a>
+			  <a class="nav-link" href="#">Achievements</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section6">Contact</a>
@@ -327,6 +333,16 @@
 			</div>
 		</div>
 	</div>
+
+	<footer>
+		<div class="container">
+			<div class="row">
+			<div class="col-md-12">
+				<p><i class="fa fa-copyright" style="color: #e33c12;"></i> Copyright 2024 by <a href="#"><em style="font-style: unset;"> Intelligentsia Academy </em></a>
+			</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="assets/js/book.js"></script>
 	<script src="vendor/jquery/jquery.min.js"></script>
