--- a/achievements.html
+++ b/achievements.html
@@ -168,16 +168,16 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		  <ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section2">About Us</a>
+			  <a class="nav-link" href="https://intelligentsiaedu.com/#section2">About Us</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section4">Courses</a>
+			  <a class="nav-link" href="https://intelligentsiaedu.com/#section4">Courses</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="#">Achievements</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="https://incredible-speculoos-69a8c5.netlify.app/#section6">Contact</a>
+			  <a class="nav-link" href="https://intelligentsiaedu.com/#section6">Contact</a>
 			</li>
 			<!-- <li class="nav-item dropdown">
 			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
