--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 <h4><i class="fa fa-graduation-cap"></i>Virtual Lectures</h4>
               </div>
               <div class="content-hide">
-                <p><b>We provide online lectures too something more to be written here regarding online lectures.</b></p>
-                <p class="hidden-sm"><b>We provide online lectures too something more to be written here regarding online lectures.</b></p>
+                <p><b>We provide online lectures too also one to one mentoring session for students every week.</b></p>
+                <p class="hidden-sm"><b>We provide online lectures too also one to one mentoring session for students every week.</b></p>
                 <div><a href="#section5">Details</a></div>
             </div>
             </div>
